nginx-template/ingress/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: webkonce.test
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-app-service
            port:
              number: 80
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-app-service
            port:
              number: 80
